crates/solidity-v2/testing/snapshots/diagnostics_output/structure/invalid_using_directive_container/library/input.sol
// SPDX-License-Identifier: MIT
pragma solidity *;

library Other {}

library L {
    using Other for uint256;
}
